style(Navigation):Fixed Logo distortion in mobile applications

--- a/src/components/Navigation/Navbar.module.css
+++ b/src/components/Navigation/Navbar.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+
 .mainNav {
   display: flex;
   justify-content: space-between;
@@ -19,8 +21,16 @@
 }
 
 .logo {
-  width: 15%;
+  margin: auto;
   padding: 5px 20px;
+  color: rgb(23, 226, 87);
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: "Audiowide", cursive;
+  font-weight: bold;
+}
+.innerText {
+  color: rgb(82, 102, 253);
 }
 
 .toggleIcon {
